refactor: simplify UserModel creation by removing AuthProvider parameter